--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -1,3 +1,4 @@
+/* Osnovni stilovi */
 .home {
   display: flex;
   align-items: center;
@@ -9,32 +10,34 @@
 
 .home-content {
   max-width: 40%;
-  margin-left: 210px;
+  margin-left: 150px;
   margin-top: -50px;
 }
 
-h1 {
-  font-size: 70px; /* Veće kao na slici */
+.home h1 {
+  margin-top: 40px;
+  font-size: 70px;
   font-weight: bold;
   color: #151516;
-  line-height: 1.2;
+  line-height: 1.1;
 }
 
 .highlight {
-  color: #e10063; /* Roze boja */
+  color: #d61c5c;
 }
 
-p {
-  font-size: 25px;
+.home p {
+  font-size: 20px;
   color: #666;
-  margin-top: 10px;
+  margin-top: 20px;
+  max-width: 700px;
 }
 
-.buttons {
+.home .buttons {
   margin-top: 30px;
 }
 
-.btn {
+.home .btn {
   padding: 14px 24px;
   font-size: 16px;
   font-weight: bold;
@@ -42,11 +45,6 @@ p {
   border-radius: 5px;
   margin-right: 10px;
   border: none;
-}
-.secondary {
-  background-color: #f2f2f0;
-  color: black;
-  border: 1px solid #666363;
 }
 
 .stats {
@@ -64,13 +62,147 @@ p {
   font-size: 17px;
   color: #666;
 }
-.home-img {
-  margin-right: auto;
-}
+
 .home-img img {
-  margin-left: 200px;
   max-width: 90%;
   border-radius: 10px;
   height: 85vh;
   width: 100%;
 }
+
+@media screen and (max-width: 1024px) {
+  .home {
+    flex-direction: column;
+    padding: 30px;
+  }
+
+  .home-content {
+    max-width: 80%;
+    margin-left: 0;
+    margin-top: 0;
+  }
+
+  .home h1 {
+    font-size: 50px;
+  }
+
+  .home p {
+    font-size: 18px;
+  }
+
+  .stats {
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 30px;
+  }
+
+  .stats h2 {
+    font-size: 40px;
+  }
+
+  .stats p {
+    font-size: 16px;
+  }
+
+  .home-img img {
+    height: auto;
+    max-width: 100%;
+  }
+
+  .home .btn {
+    font-size: 14px;
+    padding: 12px 20px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .home h1 {
+    font-size: 40px;
+  }
+  .btn-secondary {
+    margin-left: 40px;
+  }
+
+  .home p {
+    font-size: 16px;
+  }
+
+  .home .btn {
+    font-size: 14px;
+    padding: 10px 18px;
+  }
+
+  .stats h2 {
+    font-size: 35px;
+  }
+
+  .stats p {
+    font-size: 15px;
+  }
+
+  .home-img img {
+    height: auto;
+    max-width: 100%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .home h1 {
+    font-size: 28px; /* Malo manji font za bolju preglednost */
+    padding: 10px;
+    text-align: center; /* Centeriranje naslova */
+  }
+
+  .buttons {
+    margin-left: 0; /* Uklanjanje margine s leva */
+    display: flex;
+    flex-direction: column; /* Dugmadi stavljene u kolonu */
+    gap: 10px; /* Razmak između dugmadi */
+    align-items: center;
+  }
+
+  .home p {
+    font-size: 14px;
+    text-align: center; /* Tekst centriran */
+    padding: 0 15px; /* Dodavanje malih paddinga sa strane */
+  }
+
+  .stats {
+    display: flex;
+    flex-direction: column; /* Statičke informacije u koloni */
+    align-items: center; /* Centriranje statsa */
+    gap: 15px;
+  }
+  .btn-secondary{
+    margin-right: 20px;
+  }
+  .stats h2 {
+    font-size: 26px;
+    text-align: center; /* Centriranje brojeva */
+  }
+
+  .stats p {
+    font-size: 14px;
+    text-align: center;
+  }
+
+  .home .btn {
+    width: 90%; /* Dugme zauzima većinu širine */
+    font-size: 14px;
+    padding: 12px 0;
+    margin-right: 0;
+    margin-top: 10px;
+    text-align: center; /* Tekst unutar dugmeta centriran */
+  }
+
+  .home-content {
+    max-width: 100%;
+    padding: 0 15px; /* Dodavanje paddinga sa strane */
+  }
+
+  .home-img img {
+    max-width: 100%;
+    height: auto;
+  }
+}
+
