--- a/src/Styles/review.css
+++ b/src/Styles/review.css
@@ -150,6 +150,8 @@
   .quote-icon {
     left: 20px;
     font-size: 40px;
+    margin-bottom: 10px;
+    margin-left: 8px;
   }
 }
 
@@ -183,6 +185,8 @@
   .quote-icon {
     left: 15px;
     font-size: 36px;
+    margin-bottom: 10px;
+    margin-left: 8px;
   }
 
   .consultation-button {
