--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -19,6 +19,7 @@
   font-weight: bold;
   color: #151516;
   line-height: 1.1;
+  letter-spacing: 1px;
 }
 
 .highlight {
@@ -30,6 +31,7 @@
   color: #666;
   margin-top: 20px;
   max-width: 700px;
+  line-height: 1.6;
 }
 
 .home .buttons {
@@ -44,6 +46,12 @@
   border-radius: 5px;
   margin-right: 10px;
   border: none;
+  transition: background-color 0.3s ease;
+}
+
+.home .btn:hover,
+.home .btn:focus {
+  background-color: #b21447;
 }
 
 .stats {
@@ -67,6 +75,7 @@
   border-radius: 10px;
   height: 85vh;
   width: 100%;
+  margin-left: 40px;
 }
 
 @media screen and (max-width: 1024px) {
@@ -118,6 +127,7 @@
   .home h1 {
     font-size: 40px;
   }
+  
   .btn-secondary {
     margin-left: 40px;
   }
@@ -165,14 +175,17 @@
     text-align: center;
     padding: 0 15px;
   }
+
   .stats {
     display: flex;
     align-items: center;
     gap: 15px;
   }
+
   .btn-secondary {
     margin-right: 20px;
   }
+
   .stats h2 {
     font-size: 26px;
     text-align: center;
