--- a/src/Styles/review.css
+++ b/src/Styles/review.css
@@ -91,10 +91,12 @@
   font-size: 18px;
   cursor: pointer;
   border-radius: 5px;
+  transition: 0.5s ease;
 }
 
 .consultation-button:hover {
-  background-color: #b81a50;
+  background-color: #911f45;
+  transform: translateY(-1px);
 }
 
 @media (max-width: 1200px) {
