--- a/src/Styles/footer.css
+++ b/src/Styles/footer.css
@@ -65,6 +65,7 @@
     background-color: #693193; 
     color: white;
     border: none;
+    font-weight: bold;
     padding: 10px 20px;
     font-size: 0.9rem;
     border-radius: 5px;
