--- a/src/Styles/services.css
+++ b/src/Styles/services.css
@@ -15,6 +15,7 @@
   color: #f0f0f0;
   border: none;
   border-radius: 5px;
+  font-weight: bold;
   padding: 10px;
   background-color: #d51c5b;
   font-size: 17px;
