--- a/src/Styles/about.css
+++ b/src/Styles/about.css
@@ -104,6 +104,7 @@
 .about-btn {
   color: #f0f0f0;
   border: none;
+  font-weight: bold;
   border-radius: 5px;
   padding: 10px;
   background-color: #d51c5b;
@@ -438,6 +439,7 @@
     margin-left: 50px;
   }
   .about-btn {
+    font-weight: bold;
     text-align: center;
     max-width: 100%;
     max-height: 100%;
