--- a/src/Styles/blog.css
+++ b/src/Styles/blog.css
@@ -50,13 +50,7 @@
     overflow: hidden;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); 
   }
- 
-  .blog-video {
-    width: 100%;
-    height: 315px;
-    border: none;
-  }
-  .blog-img{
+  .blog-image{
     width: 100%;
   }
   @media (max-width: 768px) {
