--- a/src/Styles/review.css
+++ b/src/Styles/review.css
@@ -87,6 +87,7 @@
   color: white;
   border: none;
   padding: 15px 30px;
+  font-weight: bold;
   margin-top: 3rem;
   font-size: 18px;
   cursor: pointer;
