--- a/src/Styles/about.css
+++ b/src/Styles/about.css
@@ -117,7 +117,7 @@
 }
 
 .about-btn:hover {
-  background-color: #911f45;
+  background-color: hsl(0, 70%, 54%);
   transform: translateY(-1px);
 }
 
@@ -258,7 +258,7 @@
 }
 
 .team-btn:hover {
-  background-color: #911f45;
+  background-color: hsl(0, 70%, 54%);
   transform: translateY(-1px);
 
 }
