--- a/src/Styles/services.css
+++ b/src/Styles/services.css
@@ -26,7 +26,7 @@
   transition: 0.5s ease;
 }
 .service-btn:hover {
-  background-color: #911f45;
+  background-color: hsl(0, 70%, 54%);
   transform: translateY(-1px);
 }
 .services-heading {
