--- a/src/Styles/footer.css
+++ b/src/Styles/footer.css
@@ -124,7 +124,9 @@
     .footer-bottom-left {
       justify-content: center;
     }
-  
+    .subscribe-btn{
+      margin-left: -6px;
+    }
     .footer-bottom-right {
       text-align: center;
     }
