--- a/src/App.css
+++ b/src/App.css
@@ -75,7 +75,10 @@
   border: none;
   box-sizing: border-box;
 }
-
+.logo{
+  width: 10%;
+  height: 100%;
+}
 .hamburger {
   display: none;
   background: none;
