--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -140,7 +140,7 @@
   .home h1 {
     font-size: 35px;
   }
-  
+
   .btn-secondary {
     margin-left: 40px;
   }
@@ -169,7 +169,8 @@
   }
 
   .home-img img {
-    height: auto;
+    width: 100%;
+    height:auto;
   }
 }
 
@@ -198,7 +199,6 @@
     text-align: center;
     padding: 0 15px;
   }
-
 
   .stats {
     display: flex;
@@ -252,4 +252,32 @@
     margin-left: 0;
     margin-top: 20px;
   }
+}
+@keyframes fadeSlideUp {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.fade-slide-up {
+  opacity: 0;
+  animation: fadeSlideUp 0.8s ease-out forwards;
+}
+
+.delay-1 {
+  animation-delay: 0.2s;
+}
+.delay-2 {
+  animation-delay: 0.4s;
+}
+.delay-3 {
+  animation-delay: 0.6s;
+}
+.delay-4 {
+  animation-delay: 0.8s;
 }
